# csc

./: AdjacencyMatrix.cpp  AdjacencyMatrix.h  BitMapsForScoreVector.cpp  BitMapsForScoreVector.h  CMakeLists.txt  Ede.cpp  Edge.h  GraphToSAT.cpp  GraphToSAT.h  KemenySolver.cpp  KemenySolver.h  README.md  ScoreVector.cpp  ScoreVector.h  constants.h  johnson.txt  main.cpp  nCrBitmapGenerator.cpp  nCrBitmapGenerator.h
kissat_folder/kissat/: configure
